# ocaml-voaacenc

./: .travis.yml  CHANGES  Makefile.in  README  configure.ac
examples/: Makefile  wav2aac.ml
src/: META.in  Makefile.in  voaacenc.ml  voaacenc.mli  voaacenc_stubs.c
